--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dev:all": "turbo run dev",
     "preview": "turbo run preview",
     "build": "turbo run build",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "turbo": "^2.0.0"
   },
   "packageManager": "bun@1.0.0"
