--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "bun index.ts",
     "preview": "node dist/index.js",
-    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
+    "lint": "biome check .",
+    "lint:fix": "biome check --write ."
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.75",
