--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dev:all": "turbo run dev",
     "preview": "turbo run preview",
     "build": "turbo run build",
-    "lint": "turbo run lint",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
     "prepare": "husky"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.8",
     "husky": "^9.1.7",
     "turbo": "^2.0.0"
   },
