feat: integrate new game components and enhance UI with Radix UI elements
- Added GameCanvas, GameDialog, GameMenu, and WeatherWidget components for improved gameplay experience.
- Implemented UI elements using Radix UI for dialogs and popovers.
- Updated package.json and bun.lock to include new dependencies for Radix UI and Tailwind CSS enhancements.
- Introduced a new components.json configuration file for component styling and structure.
- Enhanced game logic with player controls and collision detection systems.
- Refactored App component to utilize GameCanvas for rendering the game.

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
       "!!**/dist",
       "!!**/.turbo",
       "!!**/build",
-      "!!**/*.lock"
+      "!!**/*.lock",
+      "!!**/*.css"
     ]
   },
   "formatter": {
@@ -38,6 +39,9 @@
     }
   },
   "css": {
+    "parser": {
+      "allowWrongLineComments": true
+    },
     "linter": {
       "enabled": false
     }
