--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "phaser": "^3.85.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
