--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon-style-game",
+  "name": "mini-world",
   "version": "1.0.0",
   "private": true,
   "workspaces": [
@@ -19,7 +19,9 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "husky": "^9.1.7",
-    "turbo": "^2.0.0"
+    "turbo": "^2.6.1",
+    "@types/bun": "latest"
   },
-  "packageManager": "bun@1.0.0"
+  "packageManager": "bun@1.3.3",
+  "type": "module"
 }
