--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@biomejs/biome": "2.3.8",
     "@types/bun": "latest",
     "husky": "^9.1.7",
-    "turbo": "^2.6.2"
+    "turbo": "^2.6.3"
   },
   "packageManager": "bun@1.3.3",
-  "type": "module"
+  "type": "module",
+  "module": "index.ts",
+  "peerDependencies": {
+    "typescript": "^5"
+  }
 }
